--- a/deepseek_html_20250909_da4d72.html
+++ b/deepseek_html_20250909_da4d72.html
@@ -476,4 +476,5 @@
         });
     </script>
 </body>
-</html>
+</html><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628807602170224"
+     crossorigin="anonymous"></script>
