--- a/deepseek_html_20250909_da4d72.html
+++ b/deepseek_html_20250909_da4d72.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video Downloader</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <!-- ✅ Google AdSense Verification Code -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628807602170224"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="
 
     <style>
         * {
@@ -297,6 +293,7 @@
             }
         }
     </style>
-</head>
+</head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628807602170224"
+     crossorigin="anonymous"></scriscriptiptiptipt
 <body>
-    <!-- rest of your body code -->
+    
