--- a/deepseek_html_20250909_da4d72.html
+++ b/deepseek_html_20250909_da4d72.html
@@ -293,7 +293,7 @@
         }
     </style>
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628807602170224"
+  <head> <scriptt async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3628807602170224"
      crossorigin="anonymous"></script>
      
 </head>
